--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: "Roboto", sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 header {
   background-color: #222922;
@@ -30,16 +30,18 @@ header .textContainer {
   margin: 0;
   padding: 0;
 }
+
 header .slogan {
   text-align: end;
   margin-top: 20px;
+  font-size: 12px;
 }
 header .slogan p {
-  font-size: 24px;
+  font-size: 20px;
   margin: 0;
 }
 header nav {
-  margin-top: 80px;
+  margin-top: 50px;
 }
 header nav ul {
   margin-top: 0;
@@ -51,14 +53,14 @@ header nav ul li {
   padding: 8px 20px;
   border-radius: 5px;
 }
-header nav ul li a {
+header nav ul a {
   text-decoration: none;
   color: inherit;
 }
 header nav ul li:hover {
   background-color: #c48c48;
 }
-header nav ul li:active {
+header nav ul li a::selection {
   background-color: #c48c48;
 }
 .mainContainer {
@@ -177,9 +179,18 @@ footer {
   gap: 10px;
   width: 100%;
 }
-.imageAndTextContainer img {
-  margin: 0;
+.aboutImageContainer {
+  background-color: gray;
+  width: 100px;
+  height: 100px;
+
+  margin: 0 20px 10px 0;
   float: left;
+}
+.aboutImageContainer img {
+  width: 100%;
+  height: 100px;
+  object-fit: cover;
 }
 .float-img {
   float: left;
