--- a/src/css/about.css
+++ b/src/css/about.css
@@ -1,4 +1,4 @@
-main {
+section {
   flex-direction: column;
   width: 900px;
   line-height: 2;
@@ -6,10 +6,19 @@ main {
 main .template {
   width: 100%;
 }
-
-.mainContainer {
-  gap: 20px;
+main > div {
+  margin: auto;
+  width: 1200px;
+  display: flex;
+  gap: 50px;
 }
+
 .submitbtn {
   padding: 10px 20px;
+}
+main h2 {
+  margin-bottom: 0;
+}
+main h3 {
+  margin-top: 10px;
 }
