--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 12px Arial, Helvetica, sans-serif;
 }
 header {
   background-color: #222922;
@@ -14,12 +14,6 @@ header span {
 header .container {
   width: 1200px;
   margin: auto;
-}
-header nav ul {
-  display: flex;
-  flex-direction: row;
-  gap: 10px;
-  list-style: none;
 }
 header .textContainer {
   display: inline-block;
@@ -44,9 +38,13 @@ header nav {
   margin-top: 50px;
 }
 header nav ul {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  list-style: none;
   margin-top: 0;
   padding: 0;
-  font-size: 24px;
+  font-weight: bold;
 }
 header nav ul li {
   background-color: #9cc31d;
@@ -60,7 +58,7 @@ header nav ul a {
 header nav ul li:hover {
   background-color: #c48c48;
 }
-header nav ul li a::selection {
+header nav ul li:active a {
   background-color: #c48c48;
 }
 .mainContainer {
@@ -128,6 +126,7 @@ aside nav > ul {
 }
 aside nav {
   padding: 0;
+  margin-top: 20px;
 }
 .sponsors,
 aside nav > ul {
@@ -166,8 +165,8 @@ footer {
 }
 .gallery .image,
 .imageAndTextContainer img {
-  width: 100px;
-  height: 100px;
+  width: 110px;
+  height: 110px;
   object-fit: contain;
 }
 .footerContainer .image img {
@@ -188,15 +187,14 @@ footer {
 }
 .aboutImageContainer {
   background-color: gray;
-  width: 100px;
-  height: 100px;
-
+  width: 110px;
+  height: 110px;
   margin: 0 20px 10px 0;
   float: left;
 }
 .aboutImageContainer img {
   width: 100%;
-  height: 100px;
+  height: 110px;
   object-fit: cover;
 }
 .float-img {
@@ -228,20 +226,10 @@ footer {
   color: white;
   text-decoration: none;
 }
+
 .copyright nav ul li:hover a {
   color: #9cc31d;
 }
 .left p a {
   color: #9cc31d;
-}
-.wrongLayout {
-  position: fixed;
-  background-color: yellow;
-  height: 30px;
-  margin: 10px;
-  padding: 10px;
-  border-radius: 10px;
-  font-size: 14px;
-  top: 0;
-  right: 0;
 }
