--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -133,10 +133,15 @@ aside nav > ul {
   margin: 0;
   padding-left: 0;
 }
+aside nav ul li a {
+  text-decoration: none;
+  color: black;
+}
 .mainContainer > div p {
   line-height: 1.8;
   font-size: 18px;
 }
+
 .mainContainer .template a,
 .contact a,
 .about a {
